tests/ui/invalid_pyfunction_signatures.stderr
error: missing signature entry for argument `_x`
 --> tests/ui/invalid_pyfunction_signatures.rs:5:8
  |
5 | #[pyo3(signature = ())]
  |        ^^^^^^^^^

error: signature entry does not have a corresponding function argument
  --> tests/ui/invalid_pyfunction_signatures.rs:10:21
   |
10 | #[pyo3(signature = (x))]
   |                     ^

error: expected argument from function definition `y` but got argument `x`
  --> tests/ui/invalid_pyfunction_signatures.rs:15:21
   |
15 | #[pyo3(signature = (x))]
   |                     ^

error: expected one of: `name`, `pass_module`, `signature`, `text_signature`, `crate`, `warn`
  --> tests/ui/invalid_pyfunction_signatures.rs:21:14
   |
21 | #[pyfunction(x)]
   |              ^

error: `*args` not allowed after `*`
  --> tests/ui/invalid_pyfunction_signatures.rs:29:24
   |
29 | #[pyo3(signature = (*, *args))]
   |                        ^

error: `*` not allowed after `*`
  --> tests/ui/invalid_pyfunction_signatures.rs:36:24
   |
36 | #[pyo3(signature = (*, *))]
   |                        ^

error: `*args` not allowed after `**kwargs`
  --> tests/ui/invalid_pyfunction_signatures.rs:41:31
   |
41 | #[pyo3(signature = (**kwargs, *args))]
   |                               ^

error: `**kwargs_b` not allowed after `**kwargs_a`
  --> tests/ui/invalid_pyfunction_signatures.rs:49:33
   |
49 | #[pyo3(signature = (**kwargs_a, **kwargs_b))]
   |                                 ^

error: arguments of type `Python` must not be part of the signature
  --> tests/ui/invalid_pyfunction_signatures.rs:56:27
   |
56 | #[pyfunction(signature = (py))]
   |                           ^^

error: expected argument from function definition `args` but got argument `kwargs`
  --> tests/ui/invalid_pyfunction_signatures.rs:67:27
   |
67 |     #[pyo3(signature = (**kwargs, *, *args, x))]
   |                           ^^^^^^

error: expected argument from function definition `x` but got argument `kwargs`
  --> tests/ui/invalid_pyfunction_signatures.rs:75:27
   |
75 |     #[pyo3(signature = (**kwargs, *, *args, x))]
   |                           ^^^^^^

error: aborting due to 11 previous errors

